reduced font size

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                         <img class="tech-logo" src="https://cdn.prod.website-files.com/65b8cd72835ceeacd4449a53/65c50ca4352352dd6a747e69_favicon.png" alt="LangGraph Logo">
                         <span>LangGraph</span>
                     </div>
+
+                    <div class="card--techstack">
+                        <img class="tech-logo" src="https://cdn.prod.website-files.com/65b8cd72835ceeacd4449a53/65c50ca4352352dd6a747e69_favicon.png" alt="LangGraph Logo">
+                        <span>LangSmith</span>
+                    </div>
                 
                     <div class="card--techstack">
                         <img class="tech-logo" src="https://scikit-learn.org/stable/_static/favicon.ico" alt="Scikit-Learn Logo">
