--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
                 <div>
                     <h1 id="user-name">Subhraneel Paul</h1>
-                    <p id="bio">Junior Machine Learning Engineer at 
-                        <a href="https://rava.ai/" target="_blank">Rava.AI</a>, 
+                    <p id="bio">Systems Engineer at 
+                        Tata Consulting Services, 
                         building intelligent AI Agents with LLMs, LangChain, Langraph and scalable AI infrastructure.
                     </p>
                     <p id="email">📧 paul.subhro2@gmail.com</p>
