--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
                 <ul id="qualifications--list">
                     <li>💼 1 year experience as a Machine Learning Engineer (full-time)</li>
                     <li>🎓 B.Tech in Mechanical Engineering (2020–2024) from IIEST, Shibpur</li>
-                    <li>🧠 Strong background in Python, LLMs, LangChain, and Power BI</li>
+                    <li>🧠 Strong background in Python, LLMs & LangChain</li>
                     <li>🛠️ Experience with RAG pipelines, OCR, and knowledge graphs</li>
                     <li>👨‍💻 Internship at PwC India in ML and Data Analytics</li>
+                    <li>📝 Authored technical articles on Python, Machine Learning, and Deep Learning for GeeksforGeeks</li>
                 </ul>
 
             </section>
