Added live link for langgraph project

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
                 <div>
                     <h1 id="user-name">Subhraneel Paul</h1>
-                    <p id="bio">Systems Engineer at 
+                    <p id="bio">ML/AI Engineer at 
                         Tata Consulting Services, 
-                        building intelligent AI Agents with LLMs, LangChain, Langraph and scalable AI infrastructure.
+                        building intelligent AI Agents with LLMs, LangChain, Langraph and scalable Machine Learning solutions.
                     </p>
                     <p id="email">📧 paul.subhro2@gmail.com</p>
                 </div>  
@@ -147,9 +147,14 @@
                 <div class="card--work-history">
                     <strong>
                         <img src="https://www.tcs.com/etc.clientlibs/tcs/clientlibs/clientlib-site/resources/images/tcs_favicon_16.png" alt="TCS Logo" class="company-logo">
-                        SYSTEMS ENGINEER | TATA CONSULTING SERVICES
+                        ML/AI ENGINEER (GRADE C1) | TATA CONSULTING SERVICES
                     </strong>
                     <p>May 2025 – present (Full time, Kolkata)</p>
+                    <ul>
+                        <li>Developed a hybrid search system (BM25 + semantic) with FAISS indexing of engineering study documents to assist engineers in information retrieval.</li>
+                        <li>Built a failure mode classifier on MAUDE complaints using Ridge Classifier; achieved 86% accuracy on a small, imbalanced dataset after data cleaning and balanced sampling.</li>
+                        <li>Trained an image classifier with ResNet on a dataset of 35 logos, leveraging Albumentations for heavy augmentation to improve model generalization.</li>
+                    </ul>
                 </div>
                 
                 <div class="line-break"></div>
@@ -191,6 +196,8 @@
                 <div>
                     <h3>🔍 LangGraph Web Search Agent</h3>
                     <p>Built an AI-powered research workflow using LangChain, LangGraph, and Streamlit. Integrated OpenAI/Groq LLMs, Serper API for search, web scraping, and SQLite for state management to enable automated multi-agent information retrieval, analysis, and structured reporting. <a href="https://github.com/subhroPaul7/Langgraph_agent" target="_blank"><i class="fab fa-github"></i></a>
+                    <br>
+                    Live Link: <a href="https://websearch-langgraph-agent.streamlit.app/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                     </p>
 
                 </div>
